[NewFeat][Q1] add new Players & Levels API
