# controllers/ping.controllers.go
@@ -9,13 +9,13 @@ import (
 )
 
 // Ping godoc
-// @Summary      Ping
-// @Description  check server
-// @Tags         ping
-// @Accept       json
-// @Produce      json
-// @Success      200  {object}  models.Response
-// @Router       /ping [get]
+//	@Summary		Ping
+//	@Description	check server
+//	@Tags			ping
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	models.Response
+//	@Router			/ping [get]
 func Ping(c *gin.Context) {
 	response := &models.Response{
 		StatusCode: http.StatusOK,
